--- a/Server/lib/Web/views/help.pug
+++ b/Server/lib/Web/views/help.pug
@@ -339,7 +339,7 @@ block Middle
 				| 하위 항목에서 그런 콘텐츠들을 하나씩 소개하도록 하죠.
 		div.page-body#box-c5p1
 			p
-				| Plus ID로 로그인하지 않고 끄투 서버에 접속하는 경우 <b>손님 계정</b>으로 간주합니다.
+				| 플러스끄투로 로그인하지 않고 끄투 서버에 접속하는 경우 <b>손님 계정</b>으로 간주합니다.
 				| 손님 계정은 저장이 필요한 콘텐츠들을 이용할 수 없으니 양해 바랍니다.
 			h4 저장이 필요한 콘텐츠:
 			ul
