--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -195,8 +195,8 @@ block Middle
 			select#room-time
 				option(value=10, style='color: #FF4444')
 				option(value=30)
-				option(value=60)
-				option(value=90, selected)
+				option(value=60, selected)
+				option(value=90)
 				option(value=120)
 				option(value=150)
 		div.dialog-bar
@@ -466,11 +466,13 @@ block Middle
 					p Copyright &copy; 2021~ Infole
 			
 	div(style="width: 100%;display: flex;height: 680px;")
+		div.lowreshidden(style="width:160px;height:600px;background-image: url(/img/ad/placeholder-l.png);")
+			ins.adsbygoogle(style="display:inline-block;width:160px;height:600px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="5307706929")
 		div(style="width: 310px;flex-direction: column;display: flex;")
 			+Product('UserList')
 				div#megauser
-					p.conn-desc.mfriend= "내 친구"
-					div#comm-friends
+					p.conn-desc.mfriend(style="display:none;")= "내 친구"
+					div#comm-friends(style="display:none;")
 					p.conn-desc= "전체 접속자"
 					div#connList 불러오는 중
 			+Product('RoominfoList')
@@ -495,7 +497,7 @@ block Middle
 				input#Talk(maxlength=200)
 				button#ChatBtn= L('send')
 
-		div(style="width: 100%")
+		div(style="width: 1290px")
 			+Product('RoomList')
 				div 불러오는 중
 
@@ -575,6 +577,8 @@ block Middle
 						div.history
 				div.game-body
 				+GraphBar('jjo-round-time')
+		div.lowreshidden(style="width:160px;height:600px; background-image: url(/img/ad/placeholder-r.png);")
+			ins.adsbygoogle(style="display:inline-block;width:160px;height:600px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="3446996199")
 	+Product('AD')
 		ins.adsbygoogle(style="display:inline-block;width:1200px;height:150px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="8845631298")
 
