--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -1,26 +1,8 @@
-@font-face {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-            @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-            @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-}
-          
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+/* Extrabold */  
 
 :root {
-	--font-body: 'NEXON Lv1 Gothic OTF', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+	--font-body: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-family: var(--font-body);
 }
@@ -33,7 +15,7 @@
 }
 .hero{
 	background-size: cover;
-	background-image: url(/img/transition.png);
+	background-image: url(https://imagestorage.pcor.me/images/2024/02/21/top.png);
 	background-repeat: no-repeat;
 }
 
