--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -165,12 +165,7 @@ equ{
 }
 
 .gradientMission{
-	background: linear-gradient(180deg, #FFFAFF, #FBCDF5, #C1C8FD, #CAF6F4);
-    -webkit-background-clip: text;
-    color: transparent;
-	font-weight: 700;
-    -webkit-text-stroke: 2px linear-gradient(180deg, #D47EC5, #8076BF, #247972);
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+	color: #FBCDF5;
 }
 
 /* 플러스끄투 커스텀 체크박스 */
@@ -610,14 +605,14 @@ iframe{
 }
 	.RoomListBox div{ float: left; }
 	.RoomListBox .product-body{padding: 20px;
-		width: calc(100% - 25px);
+		width: calc(100% - 44px);
 		height: calc(100% - 44px);
 		overflow-x: hidden;
 		overflow-y: scroll; }
 	.rooms-item{
 		padding: 25px 32px;
 		border-radius: 16px;
-		margin: 0px 35px 11px 0px;
+		margin: 0px 18px 11px 0px;
 		width: 536px;
 		cursor: pointer;
 		background-color: #fff;
@@ -635,7 +630,7 @@ iframe{
 			color: #000000;
 			float: none;
 			text-align: center;
-			font-weight: bold;
+			font-weight: 800;
 			padding-top: 23px; }
 
 		.rooms-create>div i{ margin-right: 10px; }
@@ -675,7 +670,6 @@ iframe{
 .RoomBox{
 	width: 100%;
 }
-	.RoomBox .product-title{ height: 30px; }
 	.RoomBox .product-title h5{ float: left; font-size: 20px;}
 	.RoominfoListBox .product-body{
 		padding: 15px;
@@ -824,7 +818,7 @@ iframe{
 		.room-user-name{ padding: 0px 0px 0px 4px; }
 		.room-user:hover{ cursor: pointer; background: #F1F5F9; }
 .GameBox{
-	width: 100%!important;
+	width: 100%!important;height: 680px;
 }
 	.GameBox .product-title{ display: none; }
 	.GameBox .product-title h5{ float: left; font-size:20px; }
@@ -1006,6 +1000,7 @@ iframe{
 				text-align: center;
 				color: #EEEEEE;
 				background: #4b556300;
+    			font-weight: 700;
 			}
 			.jjo-turn-time{
 				position: absolute;
@@ -1017,7 +1012,7 @@ iframe{
 			}
 			.jjo-display-word-length{ color: orange; font-size: 14px; }
 			.cw .jjo-display{ position: relative; padding: 5px; width: 298px; height: 298px; }
-				.display-text{ width: 20px; text-align: center; z-index: 1; margin-left: 10px;}
+				.display-text{ width: 20px; text-align: center; z-index: 1; margin-right: 10px;}
 				.game-fail-text{ animation: FailBlink 2s linear; color: #FF7777; }
 				.cw-bar{
 					position: absolute;
@@ -1537,11 +1532,8 @@ box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.10), 0px 4px 6px -4px rgba(0, 0, 
 	border-bottom-color: #333333;
 	color: #CCCCCC;
 	background-color: inherit;
+	display: none!important;
 }
-.ADBox .product-body{
-	padding-left: 55px;
-}
-
 @keyframes RoundEffect{
 	0%		{ font-size: 16px; color: #FFFF44; background-color: rgba(0, 0, 0, 1); }
 	100%	{ font-size: 12px; color: #FFFFFF; background-color: rgba(0, 0, 0, 0); }
